workloads/medium-place/fireflyiii/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: fireflyiii
  namespace: medium-place
  labels:
    app.kubernetes.io/name: fireflyiii
    app.kubernetes.io/part-of: fireflyiii
    app.kubernetes.io/version: 5.7.9

spec:
  replicas: 1
  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app.kubernetes.io/name: fireflyiii
      app.kubernetes.io/part-of: fireflyiii

  template:
    metadata:
      annotations:
        diun.enable: "true"
        diun.regopt: docker.io
        diun.watch_repo: "true"
        diun.include_tags: "^version-\\d+\\.\\d+\\.\\d+$"
        diun.sort_tags: "semver"
      labels:
        app.kubernetes.io/name: fireflyiii
        app.kubernetes.io/part-of: fireflyiii
        app.kubernetes.io/version: 5.7.9

    spec:
      containers:
        - name: fireflyiii
          image: fireflyiii/core:version-5.7.9

          volumeMounts:
            - name: data
              mountPath: /var/www/html/storage/upload

          ports:
            - name: http
              protocol: TCP
              containerPort: 8080

  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: medium-place

      spec:
        accessModes:
          - ReadWriteOnce
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
