workloads/medium-place/fireflyiii/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fireflyiii
  namespace: medium-place
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/part-of: fireflyiii

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - treasury.medium.place
      secretName: treasury.medium.place-tls

  rules:
    - host: treasury.medium.place
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: fireflyiii
                port:
                  name: http
